# Pill-dispenser

./: CMakeLists.txt  README.md
docs/: wiring.md
src/: main.c
